--- a/src/main/webapp/resources/register.html
+++ b/src/main/webapp/resources/register.html
@@ -7,7 +7,7 @@
         
         <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Persuit</title>
+        <title>Amazon</title>
 
         <!-- Icon css link -->
         <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
             <div class="carousel_menu_inner">
                 <div class="container">
                     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+                        <a class="navbar-brand" href="#"><img src="resources/img/amazon.png" alt=""></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
 
@@ -95,7 +95,7 @@
                                 </li>
                                 <li class="nav-item dropdown submenu active">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Pages <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    Signup <i class="fa fa-angle-down" aria-hidden="true"></i>
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item"><a class="nav-link" href="compare.html">Compare</a></li>
@@ -108,7 +108,7 @@
                                 </li>
                                 <li class="nav-item dropdown submenu">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Shop <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    Login <i class="fa fa-angle-down" aria-hidden="true"></i>
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item"><a class="nav-link" href="categories-no-sidebar-2column.html">Prodcut No Sidebar</a></li>
@@ -125,8 +125,7 @@
                                         <li class="nav-item"><a class="nav-link" href="empty-cart.html">Empty Cart</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">lookbook</a></li>
+                                
                                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                             </ul>
                             <ul class="navbar-nav justify-content-end">
@@ -162,7 +161,7 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="billing_details">
-                                <h2 class="reg_title">Billing Detail</h2>
+                                <h2 class="reg_title">Shipping Address</h2>
                                 <form class="billing_inner row">
                                     <div class="col-lg-12">
                                         <div class="form-group">
@@ -170,7 +169,7 @@
                                             <select class="selectpicker" id="cun">
                                                 <option>United State America (USA)</option>
                                                 <option>Bangladesh (BAN)</option>
-                                                <option>United State America (USA)</option>
+                                                <option>India (IND)</option>
                                             </select>
                                         </div>
                                     </div>
@@ -187,14 +186,14 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
-                                        <div class="form-group">
+                                       <!--  <div class="form-group">
                                             <label for="cname">Company Name <span>*</span></label>
                                             <select class="selectpicker" id="cname">
                                                 <option>United State America (USA)</option>
                                                 <option>Bangladesh (BAN)</option>
                                                 <option>United State America (USA)</option>
                                             </select>
-                                        </div>
+                                        </div> -->
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-group">
